Fixed z-index of open dialog

--- a/app.css
+++ b/app.css
@@ -110,7 +110,7 @@ nav {
 }
 
 .valign-wrapper, .spinner, .spinner-layer, .valign {
-    z-index: 30;
+    z-index: 20;
     position: relative;
 }
 
